--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,9 +1,21 @@
 body{
-    background-color: rgb(4, 5, 20)
+    background-color: rgb(4, 5, 20);
+}
+
+#main{
+    margin: 0 80px,
 }
 
 #buttonContainer{
     margin-top: 180px;
+    text-align: center;
+}
+
+#infoBox{
+    margin: 0 auto;
+    width: 640px;
+    color: whitesmoke;
+    border: solid 2px gray;
     text-align: center;
 }
 
@@ -22,4 +34,17 @@ button{
 canvas{
     margin: 0 auto;
     border: solid 2px gray;
+}
+
+.infoElement{
+    float: left;
+    width: 33%
+}
+
+a{
+    color: whitesmoke;
+}
+
+#infoHeader{
+    margin-bottom: 40px;
 }
